feat(perf): make a dead perf server diagnosable instead of guessable
Two perf runs died mid-load with the SUT vanishing. The container runs --rm, so
nothing survived it: no logs, no exit status, no heap. Both were diagnosed from
the k6 client's side alone, which cannot even distinguish a JVM heap OOM from a
cgroup OOM-kill from a plain crash -- three failures with three different fixes.
The investigation could name three candidate consumers and rank none of them.

Tier 1 is always on and does nothing until something breaks: exit-on-OOM so an
OOM is immediate and unambiguous rather than a thrashing JVM, heap-dump-on-OOM,
and host-side capture -- a dense sampler, `docker inspect .State` (which is
where OOMKilled and the exit code live, the single most valuable artifact), and
a log stream started with the server so it survives the container. The SUT no
longer runs --rm, since that is exactly what deletes the post-mortem.

Tier 2, behind PERF_JVM_DIAGNOSTICS=deep, adds GC logging, JFR allocation and
CPU profiling, and native memory tracking. GC logging began in tier 1 and was
moved out: the claim that it cost 0.66% rested on a single measurement its own
author called "within run-to-run noise", and a measurement inside the noise
band cannot establish an effect smaller than the band. The tracked baseline is
compared against months of history measured without any of this, so an
unproven sub-2% offset would contaminate every future trend read against it.
The honest upper bound is now written where the next person will find it.

Everything lands on a mounted volume and uploads as an artifact, including on
the failure path. A diagnostic that dies with the container is the hole we were
already in.

Four gauges expose what could not be seen from outside: event-log ring
occupancy and capacity, and in-flight bytes against their budget. A backlog
building is now visible while it builds, rather than inferred afterwards from
dropped entries. They are read at scrape time from live st